Tests/ModulesExampleDirectory/InvalidModuleExample/AFileIsNotAContaincClassName.php
<?php
/**
 * Class AFileIsNotAContaincClassName
 */
class AFileIsNotAContaincClassName
{
}

class ThisIsAlsoClass extends \stdClass
{
}
